--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pep8-naming = "^0.12.1"
 flake8-docstrings = "^1.6.0"
 pytest = "^7.1.2"
 requests = "^2.27.1"
+types-requests = "^2.27.29"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
